--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
   flutter_screenutil: ^5.9.3
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
